--- a/src/variables/variables.scss
+++ b/src/variables/variables.scss
@@ -1,6 +1,9 @@
-$primaryColor: #A42036;
+$primaryColor: #a23;
 // $themeMoodColor: #234;
 // $themeMoodLight50Color: #747f8a;
+
+$darkTextColor: #411;
+$moodGrayColor: #344;
 
 $navbarHeight: 120px;
 $topMenuHeight: 50px;
@@ -11,14 +14,24 @@ $transitionTimeMs: 250ms;
 $animationTimeMs: 500ms;
 $disappearTimeMs: 1000ms;
 
+// NavHeader
+
+$NavHeaderBorderColor: #000;
+$NavHeaderVMargin: 50px;
+$NavHeaderHeight: 60px;
+$NavHeaderTotalHeight: calc($NavHeaderVMargin * 2 + $NavHeaderHeight);
+
 // Fonts
+
 $defaultFont: 'TildaSans', Arial, sans-serif;
 $defaultFontSize: 16px;
 
 // Adaptive layouts...
+
 $smallTreshold: 660px;
 $mobileTreshold: 980px;
 $wideTreshold: 1200px;
 
 // Blocks
-$blockNavHeader: '.t821';
+
+$blockNavHeader: '.t228';
