--- a/src/app-info.scss
+++ b/src/app-info.scss
@@ -1,3 +1,3 @@
-:root {
-  --APP-INFO: imagecollection-tilda-project-2024-10 v.0.0.1 / 2024.1.23 17: 00 +0300;
+:root { --APP-INFO:
+  imagecollection-tilda-project-2024-10 v.0.0.2 / 2024.10.24 22:24 +0300;
 }
