Issue #5: fixed features gallery bugs.

--- a/src/FeaturesGal/FeaturesGal.styles.scss
+++ b/src/FeaturesGal/FeaturesGal.styles.scss
@@ -3,6 +3,9 @@
 #allrecords .uc-FeaturesGal {
   // border: 2px dashed green; // DEBUG
   background-color: transparent !important;
+  .CarouselWrapper {
+    overflow: hidden;
+  }
   .Carousel {
     .owl-stage-outer {
       overflow: visible;
