--- a/src/variables/variables.scss
+++ b/src/variables/variables.scss
@@ -24,6 +24,7 @@ $NavHeaderTotalHeight: calc($NavHeaderVMargin * 2 + $NavHeaderHeight);
 // Fonts
 
 $defaultFont: 'TildaSans', Arial, sans-serif;
+$titleFont: 'Russo One', Arial, sans-serif;
 $defaultFontSize: 16px;
 
 // Adaptive layouts...
