Issue #5: Created methods carousel, updated section title blocks.

--- a/src/variables/variables-expose.scss
+++ b/src/variables/variables-expose.scss
@@ -15,6 +15,7 @@
   --moodGrayColor: #{$moodGrayColor};
 
   --defaultFont: #{$defaultFont};
+  --titleFont: #{$titleFont};
   --defaultFontSize: #{$defaultFontSize};
 
   --navbarHeight: #{$navbarHeight};
