Issue #7: Minor fixes: removed unused blocks, footer layout bugs.

--- a/src/misc-styles/Carousel.scss
+++ b/src/misc-styles/Carousel.scss
@@ -1,6 +1,6 @@
 @use '../variables' as *;
 
-.CarouselWrapper {
+#allrecords .CarouselWrapper {
   position: relative;
   .CarouselRightArrow,
   .CarouselLeftArrow {
