--- a/src/variables/variables.scss
+++ b/src/variables/variables.scss
@@ -23,7 +23,7 @@ $NavHeaderTotalHeight: calc($NavHeaderVMargin * 2 + $NavHeaderHeight);
 
 // Fonts
 
-$defaultFont: 'TildaSans', Arial, sans-serif;
+$defaultFont: 'Inter', Arial, sans-serif;
 $titleFont: 'Russo One', Arial, sans-serif;
 $defaultFontSize: 16px;
 
